# JuegoSerpienteHaskell

./: LICENSE
JuegoSerpienteHaskell/: ejemplo.cabal  readme.txt
JuegoSerpienteHaskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
